fixed back and continue buttons on mobile

--- a/web/cobrands/popravito/base.scss
+++ b/web/cobrands/popravito/base.scss
@@ -2357,3 +2357,11 @@ label[for="form_may_show_name"] {
 .rap-notes-trigger {
     display: none;
 }
+
+#side-form .primary-button {
+    display: none;
+}
+
+#problem_form .continue-container-two {
+    position: initial;
+}
